--- a/core/ui/src/main/res/values/dimens.xml
+++ b/core/ui/src/main/res/values/dimens.xml
@@ -20,10 +20,13 @@
     <dimen name="default_bar_height">48dp</dimen>
     <dimen name="default_bar_height_extended">56dp</dimen>
     <dimen name="list_item_height">88dp</dimen>
+    <dimen name="list_item_height_2">122dp</dimen>
     <dimen name="icon_padding">12dp</dimen>
     <dimen name="icon_size">32dp</dimen>
 
-    <dimen name="margin_0">0dp</dimen>
+
+    <dimen name="margin_0x">0dp</dimen>
+    <dimen name="margin_0_125x">1dp</dimen>
     <dimen name="margin_0_25x">2dp</dimen>
     <dimen name="margin_0_5x">4dp</dimen>
     <dimen name="margin_1x">8dp</dimen>
