--- a/core/ui/src/main/res/values/styles.xml
+++ b/core/ui/src/main/res/values/styles.xml
@@ -2,12 +2,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
 
-    <style name="CardViewWithStrokeStyle" parent="Widget.MaterialComponents.CardView">
-        <item name="strokeColor">?attr/colorSecondary</item>
-        <item name="strokeWidth">@dimen/size_half_dp</item>
-        <item name="android:strokeWidth">@dimen/size_half_dp</item>
-        <item name="cardElevation">@dimen/elevation_medium</item>
-        <item name="cardMaxElevation">@dimen/elevation_large</item>
+    <style name="CardViewWithStroke" parent="Widget.MaterialComponents.CardView">
+        <item name="strokeColor">?attr/colorPrimaryDark</item>
+        <item name="strokeWidth">@dimen/size_1dp</item>
+        <item name="android:strokeWidth">@dimen/size_1dp</item>
+        <item name="cardElevation">@dimen/elevation_large</item>
+        <item name="cardMaxElevation">@dimen/elevation_xlarge</item>
     </style>
 
     <style name="TextAutofitBody1" parent="TextAppearance.MaterialComponents.Body1">
@@ -94,6 +94,39 @@
         <item name="android:autoSizeMaxTextSize" tools:ignore="NewApi">@dimen/text_size_sub_3</item>
         <item name="android:gravity">center</item>
         <item name="android:padding">@dimen/padding_0_5x</item>
+    </style>
+
+    <style name="TextAutofit.Headline6" parent="TextAppearance.MaterialComponents.Headline6">
+        <item name="android:textSize">@dimen/text_size_h6</item>
+        <item name="android:maxLines">2</item>
+        <item name="maxLines">2</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:autoSizeTextType" tools:ignore="NewApi">uniform</item>
+        <item name="autoSizeTextType">uniform</item>
+        <item name="autoSizeStepGranularity">1sp</item>
+        <item name="android:autoSizeStepGranularity" tools:ignore="NewApi">1sp</item>
+        <item name="autoSizeMinTextSize">@dimen/text_size_sub_1</item>
+        <item name="autoSizeMaxTextSize">@dimen/text_size_h6</item>
+        <item name="android:autoSizeMinTextSize" tools:ignore="NewApi">@dimen/text_size_sub_1</item>
+        <item name="android:autoSizeMaxTextSize" tools:ignore="NewApi">@dimen/text_size_h6</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">@dimen/padding_0_5x</item>
+    </style>
+
+    <style name="TextAutofit.Headline4" parent="TextAppearance.MaterialComponents.Headline5">
+        <item name="android:textSize">@dimen/text_size_h4</item>
+        <item name="android:maxLines">2</item>
+        <item name="maxLines">2</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:autoSizeTextType" tools:ignore="NewApi">uniform</item>
+        <item name="autoSizeTextType">uniform</item>
+        <item name="autoSizeStepGranularity">1sp</item>
+        <item name="android:autoSizeStepGranularity" tools:ignore="NewApi">1sp</item>
+        <item name="autoSizeMinTextSize">@dimen/text_size_sub_1</item>
+        <item name="autoSizeMaxTextSize">@dimen/text_size_h4</item>
+        <item name="android:autoSizeMinTextSize" tools:ignore="NewApi">@dimen/text_size_sub_1</item>
+        <item name="android:autoSizeMaxTextSize" tools:ignore="NewApi">@dimen/text_size_h4</item>
+        <item name="android:gravity">center</item>
     </style>
 
     <!-- used when switching from light to dark theme -->
