--- a/core/ui/src/main/res/values/themes.xml
+++ b/core/ui/src/main/res/values/themes.xml
@@ -1,16 +1,16 @@
 <resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.Wallet" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-
         <item name="colorPrimary">@color/dark_blue_800</item>
         <item name="colorPrimaryVariant">@color/dark_blue_900</item>
         <item name="colorSecondary">@color/veraman_500</item>
         <item name="colorSecondaryVariant">@color/veraman_600</item>
 
         <item name="android:colorBackground">@color/dark_blue_50</item>
-        <item name="colorSurface">@color/white</item>
+        <item name="colorSurface">@color/dark_blue_50</item>
         <item name="colorPrimarySurface">?attr/colorPrimaryVariant</item>
         <item name="colorPrimarySurfaceVariant">?attr/colorPrimaryVariant</item>
+        <item name="colorFavorite">@color/orange_500</item>
         <item name="colorError">@color/red_400</item>
 
         <item name="colorOnPrimary">@color/white</item>
