--- a/features/accounts/ui/src/main/res/layout/fragment_accounts_list.xml
+++ b/features/accounts/ui/src/main/res/layout/fragment_accounts_list.xml
@@ -8,7 +8,7 @@
     android:name="gr.jvoyatz.assignment.wallet.features.accounts.ui.AccountsFragment">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swipeContainer"
+        android:id="@+id/swipeLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -17,10 +17,21 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/resultsList"
+            android:id="@+id/dataList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
+            android:layout_height="match_parent"
+            tools:listitem="@layout/layout_accounts_item"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:orientation="vertical" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    <gr.jvoyatz.assignment.core.ui.custom.views.common.LoaderView
+        android:id="@+id/loaderView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
