sample setup for navigation between modules

--- a/core/ui/src/main/res/values/attrs.xml
+++ b/core/ui/src/main/res/values/attrs.xml
@@ -7,6 +7,6 @@
 
     <declare-styleable name="AccountView">
 
-        <attr name="hideFavorite" format="boolean"/>
+        <attr name="showFavorite" format="boolean"/>
     </declare-styleable>
 </resources>
