--- a/features/accounts/ui/src/main/res/layout/fragment_accounts_list.xml
+++ b/features/accounts/ui/src/main/res/layout/fragment_accounts_list.xml
@@ -20,7 +20,7 @@
             android:id="@+id/dataList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/layout_accounts_item"
+            tools:listitem="@layout/account_view"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:orientation="vertical" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
