showing data in account list screen

--- a/core/ui/src/main/res/layout/account_view.xml
+++ b/core/ui/src/main/res/layout/account_view.xml
@@ -9,6 +9,7 @@
 <com.google.android.material.card.MaterialCardView
     android:layout_width="0dp"
     android:layout_height="wrap_content"
+    android:minHeight="@dimen/list_item_height_2"
     app:layout_constrainedHeight="true"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
