--- a/features/account-details/src/main/res/navigation/account_details_nav_graph.xml
+++ b/features/account-details/src/main/res/navigation/account_details_nav_graph.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/account_details">
 
     <fragment
-        android:name="gr.jvoyatz.assignment.wallet.features.account.details.AccountDetailsFragment"
+        android:name="gr.jvoyatz.assignment.wallet.features.account.details.ui.AccountDetailsFragment"
         tools:layout="@layout/fragment_account_details"
         android:id="@+id/account_details"
         android:label="@string/account_details"/>
