--- a/core/ui/src/main/res/layout/loader_view.xml
+++ b/core/ui/src/main/res/layout/loader_view.xml
@@ -48,6 +48,7 @@
         android:text="@string/error"
         android:textColor="?attr/colorError"
         style="@style/TextAutofitSubtitle1"
+        android:maxLines="3"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
