--- a/features/account-details/src/main/res/layout/account_details_item_date.xml
+++ b/features/account-details/src/main/res/layout/account_details_item_date.xml
@@ -7,4 +7,4 @@
     tools:text="August 2016"
     style="@style/TextAutofitSubtitle2"
     android:gravity="start"
-    tools:context=".ui.AccountDetailsFragment"/>
+    tools:context=".AccountDetailsFragment"/>
