--- a/features/account-details/src/main/res/layout/fragment_account_details.xml
+++ b/features/account-details/src/main/res/layout/fragment_account_details.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView
+    android:id="@+id/nestedScrollview"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:fillViewport="true"
     tools:context=".AccountDetailsFragment">
 
@@ -55,7 +56,6 @@
                         android:id="@+id/account_type"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="Current Current Current"
                         app:layout_constraintTop_toTopOf="@id/label_account_type"
                         app:layout_constraintBottom_toBottomOf="@id/label_account_type"
                         app:layout_constraintStart_toEndOf="@id/label_account_type"
@@ -80,7 +80,6 @@
                         android:id="@+id/account_product"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="current account eur"
                         app:layout_constraintTop_toTopOf="@id/label_account_product"
                         app:layout_constraintBottom_toBottomOf="@id/label_account_product"
                         app:layout_constraintStart_toEndOf="@id/label_account_product"
@@ -105,7 +104,6 @@
                         android:id="@+id/account_date"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="3 dec 2015"
                         app:layout_constraintTop_toTopOf="@id/label_account_date"
                         app:layout_constraintBottom_toBottomOf="@id/label_account_date"
                         app:layout_constraintStart_toEndOf="@id/label_account_date"
@@ -130,7 +128,6 @@
                         android:id="@+id/account_branch"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="main branch"
                         app:layout_constraintTop_toTopOf="@id/label_account_branch"
                         app:layout_constraintBottom_toBottomOf="@id/label_account_branch"
                         app:layout_constraintStart_toEndOf="@id/label_account_branch"
@@ -155,7 +152,6 @@
                         android:id="@+id/account_beneficiaries"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="John Doe"
                         app:layout_constraintTop_toTopOf="@id/label_account_beneficiaries"
                         app:layout_constraintBottom_toBottomOf="@id/label_account_beneficiaries"
                         app:layout_constraintStart_toEndOf="@id/label_account_beneficiaries"
@@ -167,11 +163,16 @@
         </com.google.android.material.card.MaterialCardView>
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/transactionsList"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/accountExtraContainer"
+                android:orientation="vertical"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/account_details_item_transaction"
+                android:nestedScrollingEnabled="true"
                 app:layout_constrainedHeight="true"
                 android:layout_margin="@dimen/margin_2x" />
 
