--- a/features/account-details/src/main/res/layout/fragment_account_details.xml
+++ b/features/account-details/src/main/res/layout/fragment_account_details.xml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
-    android:id="@+id/nestedScrollview"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:fillViewport="true"
-    tools:context=".AccountDetailsFragment">
+    android:layout_height="match_parent">
+
+    <gr.jvoyatz.assignment.core.ui.custom.views.common.LoaderView
+        android:id="@+id/loaderView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
+
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fillViewport="true"
+        android:visibility="gone"
+        tools:context=".AccountDetailsFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -17,21 +27,21 @@
                 android:id="@+id/accountContainer"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/margin_2x"
                 app:layout_constrainedHeight="true"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_margin="@dimen/margin_2x" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/accountExtraContainer"
+                style="@style/CardViewWithStroke"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/accountContainer"
                 android:layout_margin="@dimen/margin_2x"
-                style="@style/CardViewWithStroke">
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/accountContainer">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -40,142 +50,141 @@
 
                     <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/label_account_type"
+                        style="@style/TextAutofitSubtitle2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:layout_constrainedWidth="true"
-                        app:layout_constrainedHeight="true"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        android:text="@string/account_type"
-                        android:padding="@dimen/padding_1x"
-                        style="@style/TextAutofitSubtitle2"
                         android:layout_marginTop="@dimen/margin_0_25x"
-                        />
+                        android:padding="@dimen/padding_1x"
+                        android:text="@string/account_type"
+                        app:layout_constrainedHeight="true"
+                        app:layout_constrainedWidth="true"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/account_type"
+                        style="@style/TextAutofitBody1"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toTopOf="@id/label_account_type"
+                        android:gravity="start"
                         app:layout_constraintBottom_toBottomOf="@id/label_account_type"
-                        app:layout_constraintStart_toEndOf="@id/label_account_type"
                         app:layout_constraintEnd_toEndOf="parent"
-                        style="@style/TextAutofitBody1"
-                        android:gravity="start" />
+                        app:layout_constraintStart_toEndOf="@id/label_account_type"
+                        app:layout_constraintTop_toTopOf="@id/label_account_type" />
 
                     <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/label_account_product"
+                        style="@style/TextAutofitSubtitle2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:layout_constrainedWidth="true"
-                        app:layout_constrainedHeight="true"
-                        app:layout_constraintTop_toBottomOf="@id/label_account_type"
-                        app:layout_constraintStart_toStartOf="parent"
-                        android:text="@string/account_name"
-                        android:padding="@dimen/padding_1x"
                         android:layout_marginTop="@dimen/margin_0_25x"
-                        style="@style/TextAutofitSubtitle2" />
+                        android:padding="@dimen/padding_1x"
+                        android:text="@string/account_name"
+                        app:layout_constrainedHeight="true"
+                        app:layout_constrainedWidth="true"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/label_account_type" />
 
                     <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/account_product"
+                        style="@style/TextAutofitBody1"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toTopOf="@id/label_account_product"
+                        android:gravity="start"
                         app:layout_constraintBottom_toBottomOf="@id/label_account_product"
-                        app:layout_constraintStart_toEndOf="@id/label_account_product"
                         app:layout_constraintEnd_toEndOf="parent"
-                        style="@style/TextAutofitBody1"
-                        android:gravity="start" />
+                        app:layout_constraintStart_toEndOf="@id/label_account_product"
+                        app:layout_constraintTop_toTopOf="@id/label_account_product" />
 
                     <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/label_account_date"
+                        style="@style/TextAutofitSubtitle2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:layout_constrainedWidth="true"
-                        app:layout_constrainedHeight="true"
-                        app:layout_constraintTop_toBottomOf="@id/label_account_product"
-                        app:layout_constraintStart_toStartOf="parent"
-                        android:text="@string/account_opened_date"
-                        android:padding="@dimen/padding_1x"
                         android:layout_marginTop="@dimen/margin_0_25x"
-                        style="@style/TextAutofitSubtitle2" />
+                        android:padding="@dimen/padding_1x"
+                        android:text="@string/account_opened_date"
+                        app:layout_constrainedHeight="true"
+                        app:layout_constrainedWidth="true"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/label_account_product" />
 
                     <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/account_date"
+                        style="@style/TextAutofitBody1"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toTopOf="@id/label_account_date"
+                        android:gravity="start"
                         app:layout_constraintBottom_toBottomOf="@id/label_account_date"
-                        app:layout_constraintStart_toEndOf="@id/label_account_date"
                         app:layout_constraintEnd_toEndOf="parent"
-                        style="@style/TextAutofitBody1"
-                        android:gravity="start" />
+                        app:layout_constraintStart_toEndOf="@id/label_account_date"
+                        app:layout_constraintTop_toTopOf="@id/label_account_date" />
 
                     <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/label_account_branch"
+                        style="@style/TextAutofitSubtitle2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:layout_constrainedWidth="true"
-                        app:layout_constrainedHeight="true"
-                        app:layout_constraintTop_toBottomOf="@id/label_account_date"
-                        app:layout_constraintStart_toStartOf="parent"
-                        android:text="@string/account_branch"
-                        android:padding="@dimen/padding_1x"
                         android:layout_marginTop="@dimen/margin_0_25x"
-                        style="@style/TextAutofitSubtitle2" />
+                        android:padding="@dimen/padding_1x"
+                        android:text="@string/account_branch"
+                        app:layout_constrainedHeight="true"
+                        app:layout_constrainedWidth="true"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/label_account_date" />
 
                     <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/account_branch"
+                        style="@style/TextAutofitBody1"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toTopOf="@id/label_account_branch"
+                        android:gravity="start"
                         app:layout_constraintBottom_toBottomOf="@id/label_account_branch"
-                        app:layout_constraintStart_toEndOf="@id/label_account_branch"
                         app:layout_constraintEnd_toEndOf="parent"
-                        style="@style/TextAutofitBody1"
-                        android:gravity="start" />
+                        app:layout_constraintStart_toEndOf="@id/label_account_branch"
+                        app:layout_constraintTop_toTopOf="@id/label_account_branch" />
 
                     <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/label_account_beneficiaries"
+                        style="@style/TextAutofitSubtitle2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:layout_constrainedWidth="true"
-                        app:layout_constrainedHeight="true"
-                        app:layout_constraintTop_toBottomOf="@id/label_account_branch"
-                        app:layout_constraintStart_toStartOf="parent"
-                        android:text="@string/account_beneficiaries"
-                        android:padding="@dimen/padding_1x"
                         android:layout_marginTop="@dimen/margin_0_25x"
-                        style="@style/TextAutofitSubtitle2" />
+                        android:padding="@dimen/padding_1x"
+                        android:text="@string/account_beneficiaries"
+                        app:layout_constrainedHeight="true"
+                        app:layout_constrainedWidth="true"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/label_account_branch" />
 
                     <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/account_beneficiaries"
+                        style="@style/TextAutofitBody1"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toTopOf="@id/label_account_beneficiaries"
+                        android:gravity="start"
                         app:layout_constraintBottom_toBottomOf="@id/label_account_beneficiaries"
-                        app:layout_constraintStart_toEndOf="@id/label_account_beneficiaries"
                         app:layout_constraintEnd_toEndOf="parent"
-                        style="@style/TextAutofitBody1"
-                        android:gravity="start" />
+                        app:layout_constraintStart_toEndOf="@id/label_account_beneficiaries"
+                        app:layout_constraintTop_toTopOf="@id/label_account_beneficiaries" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
-        </com.google.android.material.card.MaterialCardView>
+            </com.google.android.material.card.MaterialCardView>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/transactionsList"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/accountExtraContainer"
+                android:layout_margin="@dimen/margin_2x"
+                android:nestedScrollingEnabled="true"
                 android:orientation="vertical"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/account_details_item_transaction"
-                android:nestedScrollingEnabled="true"
                 app:layout_constrainedHeight="true"
-                android:layout_margin="@dimen/margin_2x" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/accountExtraContainer"
+                tools:listitem="@layout/account_details_item_transaction" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.core.widget.NestedScrollView>
-
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
+</FrameLayout>
