--- a/features/account-details/src/main/res/layout/fragment_account_details.xml
+++ b/features/account-details/src/main/res/layout/fragment_account_details.xml
@@ -11,12 +11,17 @@
         android:layout_height="match_parent"
         android:visibility="gone"/>
 
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fillViewport="true"
-        android:visibility="gone"
+        android:visibility="visible"
         tools:context=".AccountDetailsFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -171,6 +176,19 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </com.google.android.material.card.MaterialCardView>
 
+
+            <gr.jvoyatz.assignment.core.ui.custom.views.common.LoaderView
+                android:id="@+id/transactionsLoader"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constrainedHeight="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/accountExtraContainer"
+                android:layout_margin="@dimen/margin_2x"
+                android:visibility="gone"
+                />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/transactionsList"
                 android:layout_width="0dp"
@@ -183,8 +201,10 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/accountExtraContainer"
-                tools:listitem="@layout/account_details_item_transaction" />
+                tools:listitem="@layout/account_details_item_transaction"
+                tools:visibility="gone"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </FrameLayout>
