--- a/features/account-details/src/main/res/layout/fragment_account_details.xml
+++ b/features/account-details/src/main/res/layout/fragment_account_details.xml
@@ -185,7 +185,9 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/accountExtraContainer"
-                android:layout_margin="@dimen/margin_2x"
+                android:layout_marginStart="@dimen/margin_2x"
+                android:layout_marginEnd="@dimen/margin_2x"
+                android:layout_marginTop="@dimen/margin_5x"
                 android:visibility="gone"
                 />
 
