minor fixes & updates

--- a/app/src/main/res/navigation/wallet_nav_graph.xml
+++ b/app/src/main/res/navigation/wallet_nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/accountsFragment"
         android:name="gr.jvoyatz.assignment.wallet.accounts.AccountsFragment"
-        android:label="Accounts"
+        android:label="@string/accounts_portfolio"
         tools:layout="@layout/fragment_accounts_list">
 
         <action
